--- a/src/EasyAbp.Abp.Sms.TencentCloud/EasyAbp.Abp.Sms.TencentCloud.csproj
+++ b/src/EasyAbp.Abp.Sms.TencentCloud/EasyAbp.Abp.Sms.TencentCloud.csproj
@@ -3,12 +3,14 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace />
     <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EasyAbp.Abp.TencentCloud.Sms" Version="1.1.1" />
+    <PackageReference Include="Volo.Abp.Json" Version="3.0.4" />
     <PackageReference Include="Volo.Abp.Sms" Version="3.0.4" />
     <PackageReference Include="Volo.Abp.Validation" Version="3.0.4" />
   </ItemGroup>
