--- a/src/EasyAbp.Abp.Sms.TencentCloud/EasyAbp.Abp.Sms.TencentCloud.csproj
+++ b/src/EasyAbp.Abp.Sms.TencentCloud/EasyAbp.Abp.Sms.TencentCloud.csproj
@@ -10,13 +10,13 @@
 
   <ItemGroup>
     <PackageReference Include="EasyAbp.Abp.TencentCloud.Sms" Version="1.3.0" />
-    <PackageReference Include="Volo.Abp.Json" Version="3.2.1" />
-    <PackageReference Include="Volo.Abp.Sms" Version="3.2.1" />
-    <PackageReference Include="Volo.Abp.Validation" Version="3.2.1" />
+    <PackageReference Include="Volo.Abp.Json" Version="3.3.2" />
+    <PackageReference Include="Volo.Abp.Sms" Version="3.3.2" />
+    <PackageReference Include="Volo.Abp.Validation" Version="3.3.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="3.1.6" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="3.1.*" />
   </ItemGroup>
   
   <ItemGroup>
