--- a/src/EasyAbp.Abp.Sms.TencentCloud/EasyAbp.Abp.Sms.TencentCloud.csproj
+++ b/src/EasyAbp.Abp.Sms.TencentCloud/EasyAbp.Abp.Sms.TencentCloud.csproj
@@ -3,20 +3,20 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace />
     <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EasyAbp.Abp.TencentCloud.Sms" Version="1.3.0" />
-    <PackageReference Include="Volo.Abp.Json" Version="3.3.2" />
-    <PackageReference Include="Volo.Abp.Sms" Version="3.3.2" />
-    <PackageReference Include="Volo.Abp.Validation" Version="3.3.2" />
+    <PackageReference Include="EasyAbp.Abp.TencentCloud.Sms" Version="1.6.0" />
+    <PackageReference Include="Volo.Abp.Json" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.Sms" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.Validation" Version="4.0.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="3.1.*" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="5.0.*" />
   </ItemGroup>
   
   <ItemGroup>
