--- a/src/EasyAbp.Abp.Sms.TencentCloud/EasyAbp.Abp.Sms.TencentCloud.csproj
+++ b/src/EasyAbp.Abp.Sms.TencentCloud/EasyAbp.Abp.Sms.TencentCloud.csproj
@@ -10,9 +10,9 @@
 
   <ItemGroup>
     <PackageReference Include="EasyAbp.Abp.TencentCloud.Sms" Version="1.6.0" />
-    <PackageReference Include="Volo.Abp.Json" Version="4.0.2" />
-    <PackageReference Include="Volo.Abp.Sms" Version="4.0.2" />
-    <PackageReference Include="Volo.Abp.Validation" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.Json" Version="$(AbpVersion)" />
+    <PackageReference Include="Volo.Abp.Sms" Version="$(AbpVersion)" />
+    <PackageReference Include="Volo.Abp.Validation" Version="$(AbpVersion)" />
   </ItemGroup>
 
   <ItemGroup>
