--- a/host/EasyAbp.Abp.Sms.TencentCloud.HttpApi.Host/appsettings.json
+++ b/host/EasyAbp.Abp.Sms.TencentCloud.HttpApi.Host/appsettings.json
@@ -3,8 +3,8 @@
     "CorsOrigins": "https://*.TencentCloud.com,http://localhost:4200"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=TencentCloud_Main;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "TencentCloud": "Server=(LocalDb)\\MSSQLLocalDB;Database=TencentCloud_Module;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=TencentCloud_Main;Trusted_Connection=True",
+    "TencentCloud": "Server=(LocalDb)\\MSSQLLocalDB;Database=TencentCloud_Module;Trusted_Connection=True"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
