--- a/host/EasyAbp.Abp.Sms.TencentCloud.HttpApi.Host/EasyAbp.Abp.Sms.TencentCloud.HttpApi.Host.csproj
+++ b/host/EasyAbp.Abp.Sms.TencentCloud.HttpApi.Host/EasyAbp.Abp.Sms.TencentCloud.HttpApi.Host.csproj
@@ -12,6 +12,8 @@
   <ItemGroup>
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
+    <PackageReference Include="IdentityModel" Version="5.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.*" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="5.0.*" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.*" />
     <PackageReference Include="Volo.Abp.Autofac" Version="$(AbpVersion)" />
