--- a/host/EasyAbp.Abp.Sms.TencentCloud.HttpApi.Host/EasyAbp.Abp.Sms.TencentCloud.HttpApi.Host.csproj
+++ b/host/EasyAbp.Abp.Sms.TencentCloud.HttpApi.Host/EasyAbp.Abp.Sms.TencentCloud.HttpApi.Host.csproj
@@ -13,9 +13,9 @@
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="IdentityModel" Version="5.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="6.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.1">
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.*" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="6.0.*" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.*">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
