--- a/host/EasyAbp.Abp.Sms.TencentCloud.IdentityServer/EasyAbp.Abp.Sms.TencentCloud.IdentityServer.csproj
+++ b/host/EasyAbp.Abp.Sms.TencentCloud.IdentityServer/EasyAbp.Abp.Sms.TencentCloud.IdentityServer.csproj
@@ -10,8 +10,8 @@
   <ItemGroup>
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="6.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.1">
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="6.0.*" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.*">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
