--- a/src/EasyAbp.Abp.Sms.TencentCloud/EasyAbp.Abp.Sms.TencentCloud.csproj
+++ b/src/EasyAbp.Abp.Sms.TencentCloud/EasyAbp.Abp.Sms.TencentCloud.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.*" />
   </ItemGroup>
   
   <ItemGroup>
